<resources>
    <string name="app_name">session_01</string>
    <string name="aprobracion_requerimientos">Aprobración de Requerimientos</string>
    <string name="login_aplicacion">LOGIN DE APLICACIÓN</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="ingresar">Ingresar</string>
    <string name="v_1_0">v 1.0</string>
    <string name="numero">Número</string>
    <string name="draft_nombre">draft_nombre</string>
    <string name="draft_tipoDocumento">draft_tipoDocumento</string>
    <string name="documento">Documento</string>
    <string name="estado">Estado</string>
    <string name="draft_estado">draft_estado</string>
    <string name="descripcion">Descripción</string>
    <string name="draft_descripcion">draft_descripcion</string>
    <string name="fecha">Fecha</string>
    <string name="draft_fecha">draft_fecha</string>
    <string name="title_detalleAprobacionDocumento">Detalle Aprobacion Documento</string>
    <string name="draft_numero">draft_numero</string>
    <string name="tipoDocumento">Tipo de Documento</string>
    <string name="abrevacion">Abrevación</string>
    <string name="draft_abrevacion">draft_abrevacion</string>
    <string name="estadoItem">Estado de Item</string>
    <string name="draft_estadoItem">draft_estadoItem</string>
    <string name="usuarioRegistro">Usuario de Registro</string>
    <string name="draft_usuarioRegistro">draft_usuarioRegistro</string>
    <string name="fechaRegistro">Fecha de Registro</string>
    <string name="draft_fechaRegistro">draft_fechaRegistro</string>
    <string name="horaRegistro">Hora de Registro</string>
    <string name="draft_horaRegistro">draft_horaRegistro</string>
    <string name="observacion">Observación</string>
    <string name="draft_observacion">draft_observacion</string>
    <string name="exportarPdf">Exportar en PDF</string>
    <string name="subir_foto">Subir imagen</string>
</resources>