<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activity.DetalleAprobacionDocumentoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <!--Info-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lycInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <!--Numero-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/numero"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/tvNumero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/draft_numero"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnNumero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/draft_numero"
                    android:textAllCaps="false"
                    android:letterSpacing="0.08"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    app:cornerRadius="10dp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--TipoDocumento-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tipoDocumento"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/tvTipoDocumento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/draft_tipoDocumento"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--Abreviacion-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/abrevacion"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/tvAbrevacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/draft_abrevacion"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--EstadoItem-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/estadoItem"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/tvEstadoItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/draft_estadoItem"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--Descripcion-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descripcion"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/tvDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/draft_descripcion"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--UsuarioRegistro-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/usuarioRegistro"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/tvUsuarioRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/draft_usuarioRegistro"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--FechaRegistro-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fechaRegistro"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/tvFechaRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/draft_fechaRegistro"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--HoraRegistro-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/horaRegistro"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/tvHoraRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/draft_horaRegistro"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--HoraRegistro-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/observacion"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/tvObservacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/draft_observacion"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <!--Boton Exportar-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lycBoton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="28dp"
            android:elevation="10dp"
            app:layout_constraintTop_toBottomOf="@id/lycInfo">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exportarPdf"
                android:textAllCaps="false"
                android:letterSpacing="0.08"
                android:backgroundTint="@color/red"
                app:cornerRadius="10dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>